--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret= 984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
 jwt.lifetime= 30m
+spring.main.allow-circular-references: true
